# config

./: .gitignore  .oxlintrc.json  CHANGELOG.md  CLAUDE.md  DESIGN-cohort-context.md  DESIGN-limits.md  DESIGN-segment-context.md  Dockerfile.eso-refresher  Package.swift  README.md  SCHEMA_USAGE.md  jitpack.yml  package.json  pnpm-lock.yaml  tsconfig.json  tsup.cli.config.ts  tsup.config.ts  tsup.workers.config.ts  vitest.config.mts  vitest.integration.config.mts
.build/: build.db  debug.yaml  workspace-state.json
.changeset/: add-language-readmes.md  bootstrap-429-retry.md  bootstrap-harness-override.md  bump-logger-fetch-utils.md  cli-honors-env-vars.md  client-feature-flags.md  cohort-evaluator.md  config-v2.md  container-runtime-mode-dotnet.md  container-runtime-mode-go.md  container-runtime-mode-python.md  container-runtime-mode-ts.md  docs-bundled-compute-sidecar.md  docs-whats-in-the-box.md  dotnet-config-client.md  dotnet-config-phase2.md  eso-bearer-refresher.md  eso-manifest-generator.md  eso-manifests-parity.md  eso-refresher-keepalive.md  eso-refresher-parity.md  fix-crates-publish.md  fix-inline-fetch-in-browser-build.md  fix-publish.md  fix-pypi-publish.md  fix-release-workflow.md  great-spoons-walk.md  hydrate-helper.md  kotlin-mobile-sdk.md  limits-config-kind.md  mean-wasps-lick.md  mobile-sdk-consumption.md  mobile-sdk-parity.md  python-parity.md  readme-priority-chain-v4.md  readme-update.md  runtime-bake.md  rust-container-runtime-mode.md  segment-rename.md  smoodev-617-inline-sync-worker.md  (+23 more)
.husky/: pre-commit
.smooai-logs/: output.ansi
docs/: Container-Runtime-Mode-Spec.md  Container-Runtime-Mode.md  ESO-Bearer-Refresher.md  Mobile-Runtime-Mode-Spec.md
dotnet/: README.md  SmooAI.Config.sln
kotlin/: build.gradle.kts  settings.gradle.kts
python/: README.md  basedpyrightconfig.json  pyproject.toml
python/src/smooai_config/: __init__.py  bootstrap.py  build.py  client.py  cloud_region.py  config_manager.py  container.py  env_config.py  eso_manifests.py  eso_refresher.py  file_config.py  local.py  merge.py  runtime.py  schema.py  schema_validator.py  token_provider.py  utils.py
python/tests/: test_bootstrap.py  test_client.py  test_client_integration.py  test_cloud_region.py  test_config_manager.py  test_container.py  test_env_config.py  test_eso_manifests.py  test_eso_refresher.py  test_evaluate_feature_flag.py  test_file_config.py  test_local.py  test_local_integration.py  test_merge.py  test_priority_chain_integration.py  test_runtime.py  test_schema.py  test_schema_validator.py  test_token_provider.py  test_utils.py
rust/config/: Cargo.toml  README.md
rust/config/src/: bootstrap.rs  build.rs  client.rs  cloud_region.rs  config_manager.rs  container.rs  deferred.rs  env_config.rs  eso_manifests.rs  eso_refresher.rs  file_config.rs  lib.rs  local.rs  merge.rs  runtime.rs  schema.rs  schema_validator.rs  token_provider.rs  utils.rs
rust/config/tests/: bake_integration.rs  client_integration.rs  container_integration.rs  evaluate_feature_flag.rs  local_integration.rs  priority_chain_integration.rs  token_provider.rs
scripts/: build-sync-worker.mjs  smoke-bundled.mjs  (+5 more)
(+564 files in other folders)
