[project]
name = "smooai-config"
version = "1.0.7"
description = "Smoo AI Configuration Management Library"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/smooai_config"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "basedpyright>=1.0.0",
    "poethepoet>=0.25.0",
]

[tool.poe.tasks]
lint = "ruff check src/ tests/"
"lint:fix" = "ruff check --fix src/ tests/"
format = "ruff format src/ tests/"
"format:check" = "ruff format --check src/ tests/"
typecheck = "basedpyright src/"
test = "pytest tests/ -v"
build = "uv build --wheel --sdist"
"install-dev" = "uv sync"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.basedpyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
