[package]
name = "smooai-config"
version = "1.0.7"
edition = "2021"
description = "Smoo AI Configuration Management Library"
license = "MIT"

[dependencies]
percent-encoding = "2"
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros", "rt-multi-thread"] }
wiremock = "0.6"
tempfile = "3"

[features]
