[package]
name = "smooai-config"
version = "4.2.3"
edition = "2021"
description = "Type-safe three-tier configuration management (public, secret, feature flags) with schema validation and a runtime client for the Smoo AI config platform."
license = "MIT"
repository = "https://github.com/SmooAI/config"
homepage = "https://github.com/SmooAI/config"
keywords = ["config", "configuration", "feature-flags", "smooai", "secrets"]
categories = ["config", "development-tools"]
readme = "README.md"

[dependencies]
percent-encoding = "2"
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros", "rt-multi-thread"] }
wiremock = "0.6"
tempfile = "3"

[features]
